# StepSketch

./: README.md  config.py  main.py  pyproject.toml
src/: config.py  gui.py  main.py  models.py  storage.py
src/qml/: StepSketch.qmlproject  main.qml
src/qml/pages/: Home.ui.qml  Timeline.qml  Timeline.ui.qml  pages.qrc
